--- a/app/src/main/res/layout/activity_data_base.xml
+++ b/app/src/main/res/layout/activity_data_base.xml
@@ -35,8 +35,9 @@
         android:layout_height="wrap_content"
         android:text="Add Data"
         android:id="@+id/button_add"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/input_name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="74dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -46,5 +47,45 @@
         android:layout_alignBottom="@+id/button_add"
         android:layout_toRightOf="@+id/button_add"
         android:layout_toEndOf="@+id/button_add" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update"
+        android:id="@+id/button_update"
+        android:layout_alignBaseline="@+id/button_add"
+        android:layout_alignBottom="@+id/button_add"
+        android:layout_toLeftOf="@+id/button_add"
+        android:layout_toStartOf="@+id/button_add" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="ID"
+        android:id="@+id/text_id"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="76dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/input_id"
+        android:layout_alignBottom="@+id/text_id"
+        android:layout_alignLeft="@+id/button_update"
+        android:layout_alignStart="@+id/button_update"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete Data"
+        android:id="@+id/button_delete"
+        android:layout_below="@+id/button_add"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
